--- a/style.css
+++ b/style.css
@@ -1,260 +1,166 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+*
+  box-sizing border-box
 
-/* RESET */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-:root {
-  /* COLORS */
-  --red-dk: #BA0025;
-  --red-md: #DC143C;
-  --pink-dk: #EB0674;
-  --pink-lt: #FFB6C1;
-  --purple-dk: #98006A;
-  --purple-md: #CE0090;
-  
-  --neutral-dk: #333;
-  --neutral-md: #999;
-  --neutral-mdlt: lightgray;
-  --neutral-lt: #fff;
-  /* FONT */
-  --font-sans: "Poppins", sans-serif;
-  --font-display: "Lobster", sans-serif;
-}
+:root
+  --tongue hsl(4, 80%, 42%)
+  --pupil hsl(0, 0%, 100%)
+  --icing hsl(0, 0%, 95%)
+  --stroke hsl(0, 0%, 10%)
 
-/* MAIN STYLES */
-body {
-  background: var(--pink-lt); 
-  font-family: var(--font-sans);
-}
-p {
-  font-size: 20px;
-  margin: 20px 0;
-}
-h1, h2 {
-  font-family: var(--font-display);
-  font-size: 36px;
-  color: var(--red-dk);
-  text-shadow: 1px 2px 2px white;
-}
-button {
-  background: transparent;
-  border: none;
-  font-family: var(--font-sans);
-  cursor: pointer;
-}
-/* this article is used to center the component within the viewport */
-article {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100%;
-}
+body
+  --frosting 'hsl(%s, 100%, 55%)' % var(--frosting-hue, 0)
+  --lightness 50
+  --flame 0
+  --glow-hue 40
+  --glow-saturation 50
+  --glow-lightness 35
+  --glow-alpha 0.4
+  --transparency-alpha 0
+  --glow 'hsla(%s, %s, %s, %s)' % (var(--glow-hue) calc(var(--glow-saturation) * 1%) calc(var(--glow-lightness) * 1%) var(--glow-alpha))
+  --transparent 'hsla(0, 0%, 0%, %s)' % var(--transparency-alpha)
+  display flex
+  overflow hidden
+  align-items center
+  justify-content center
+  min-height 100vh
+  background 'hsl(180, 30%, %s)' % calc(var(--lightness, 50) * 1%)
 
-/* MESSAGES */
-.message {
-  text-align: center;
-  margin-top: 40px;
-}
-.message-2 {
-  display: none;
-}
+.whitespace
+  width 7px
+.birthday-button
+  position relative
+  transform scale(0.6)
+  cursor pointer
 
-/* ENVELOPE */
+  &__text
+    position absolute
+    top 0
+    left 0
+    height 100%
+    width 100%
+    display flex
+    text-align center
+    align-items center
+    justify-content center
+    font-size 1.5rem
+    font-family sans-serif
+    font-weight bold
 
-/* envelope-container contains all elements of the featured component (you can think of it like your canvas area) */
-.envelope-container {
-  position: relative; /* needed to allow for positioning some elements as absolute within the container */
-  height: 450px;
-  width: 350px;
-}
-.envelope-base {
-  position: absolute;
-  bottom: 0;
-  height: 200px;
-  width: 100%;
-  border: 1px solid var(--neutral-md);
-  border-radius: 5px;
-  background: var(--neutral-lt);
-  box-shadow: 0px 10px 30px rgba(0,0,0,.3), 0px 8px 10px rgba(0,0,0,.3);
-  z-index: 1;
-}
-.envelope-flap {
-  position: absolute;
-  bottom: 50px;
-  height: 300px;
-  width: 100%;
-  z-index: 10;
-}
-.inner {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 50%;
-  width: 100%;
-}
-.inner-polygon {
-  fill: var(--neutral-lt); 
-  stroke: var(--neutral-md); 
-  stroke-width: 1;
-}
-.inner-open {
-  fill: var(--neutral-mdlt);
-}
-.outer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  overflow: hidden;
-}
-.outer-polygon {
-  fill: var(--neutral-lt); 
-  stroke: var(--neutral-md); 
-  stroke-width: 1;
-}
-.outer-open {
-  opacity: 1;
-}
+    .char
+      display inline-block
+      color 'hsl(%s, %s, %s)' % (var(--hue, 0) calc(var(--char-sat, 0) * 1%) calc(var(--char-light, 0) * 1%))
 
-/* HEART BUTTON */
-.heart-btn {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  bottom: 20px;
-  left: 145px;
-  color: var(--red-md);
-  font-size: 60px;
-  z-index: 1000;
-}
-.heart-btn:hover {
-  color: var(--purple-dk);
-}
-.heart-btn-text {
-  position: absolute;
-  font-size: 12px;
-  letter-spacing: .5px;
-  color: var(--neutral-lt);
-  z-index: 1000;
-}
-/* CLOSE BUTTON */
-.close-btn {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  color: var(--neutral-dk);
-  background: var(--pink-lt);
-  border: none;
-  border-radius: 5px;
-  padding: 8px 16px;
-  box-shadow: 0px 2px 6px rgba(0,0,0,.2);
-  font-size: 10px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  display: none;
-  z-index:10000;
-}
-.close-btn:hover {
-  color: var(--neutral-lt);
-  background: var(--red-md);
-  box-shadow: 0px 2px 4px rgba(0,0,0,.1);
-}
+  &:before
+    content ''
+    position absolute
+    height 240px
+    width 240px
+    background radial-gradient(var(--glow), var(--transparent) 30%), radial-gradient(var(--glow), var(--transparent) 50%)
+    border-radius 50%
+    top 50%
+    left 50%
+    transform translate(-50%, -70%) scale(calc(var(--flame) * 3))
+    z-index 2
+    filter blur(15px)
+    opacity var(--flame)
+  &:after
+    content ''
+    height 30px
+    width 400px
+    filter blur(15px)
+    position absolute
+    background radial-gradient(var(--glow), var(--transparent) 20%), radial-gradient(var(--glow), var(--transparent))
+    top 100%
+    left 50%
+    transform translate(-50%, -50%) scale(calc(var(--flame) * 1))
+    opacity var(--flame)
 
-/* REUSABLE TOGGLE CLASSES */
-.hide {
-  display: none;
-}
-.show {
-  display: block;
-}
+  &__button
+    width 240px
+    height 100px
+    position relative
+    border 0
+    background var(--icing)
+    border-radius 14px
+    cursor pointer
 
-/* FLOATING HEARTS */
-.floating-hearts {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-.ri-heart-fill {
-  font-size: 22px;
-}
-.hearts-row {
-  display: flex;   
-  justify-content: center;
-  gap: 10px;
-  width: 100%;
-  opacity: 0;
-}
-.animated {
-  animation-name: launch;
-  animation-iteration-count: 1;
-  animation-duration: 3s;
-  animation-fill-mode: forwards;
-}
+  &__cake
+    position absolute
+    bottom 0
+    left 50%
+    transform translate(-50%, 0)
+    width 289.5px
+    display none
 
-@keyframes launch {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.row-1 {
-  color: var(--red-dk);
-}
-.row-2 {
-  color: var(--red-md);
-  animation-delay: 300ms;
-}
-.row-3 {
-  color: var(--pink-dk);
-  animation-delay: 600ms;
-}
-.row-4 {
-  color: var(--purple-md);
-   animation-delay: 900ms;
-}
-.row-5 {
-  color: var(--purple-dk);
-  animation-delay: 1200ms;
-}
-.row-6 {
-  color: var(--purple-md);
-  animation-delay: 1500ms;
-  justify-content: flex-end;
-  padding-right: 50px;
-}
-.row-7 {
-  color: var(--pink-dk);
-  animation-delay: 1800ms;  
-  justify-content: flex-end;
-  padding-right: 36px;
-}
-.row-8 {
-  color: var(--red-md);
-  animation-delay: 2100ms;
-  justify-content: flex-end;
-  padding-right: 20px;
-}
-.row-9 {
-  color: var(--red-dk);
-  animation-delay: 2400ms;
-  justify-content: flex-end;
-  padding-right: 10px;
-}
-.row-10 {
-  color: var(--red-dk);
-  animation-delay: 2400ms;
-  justify-content: flex-end;
-  padding-right: 20px;
-}
+.cake
+  &__eye-body
+    fill var(--stroke)
+  &__eye-pupil
+    fill var(--pupil)
+  &__tongue
+    fill var(--tongue)
+  &__mouth-opening
+    fill var(--stroke)
+    stroke var(--stroke)
+  &__sprinkle
+    --sprinkle 'hsl(%s, 100%, 75%)' % var(--sprinkle-hue, 0)
+    fill var(--sprinkle)
+  &__frosting
+    &--start
+      fill var(--frosting)
+    &--duplicate
+      fill var(--frosting)
+
+.candle__flame
+  opacity var(--flame, 0)
+
+  &-outer
+    fill hsl(22, 100%, 56%)
+  &-inner
+    fill hsl(50, 85%, 52%)
+
+.face__stroke
+  stroke var(--stroke)
+
+.cake__candle
+  &:nth-of-type(1)
+    --flame 0
+  &:nth-of-type(2)
+    --flame 0
+  &:nth-of-type(3)
+    --flame 0
+
+label
+  height 44px
+  width 44px
+  position fixed
+  bottom 1rem
+  right 1rem
+  cursor pointer
+
+  & > svg
+    position absolute
+    height 100%
+    width 100%
+    top 0
+    left 0
+
+  path
+    fill hsl(180, 20%, 35%)
+
+  svg:nth-of-type(1)
+    display none
+
+[type='checkbox']
+  // opacity 0
+  height 0
+  width 0
+  position absolute
+  top 0
+  left 100%
+
+:checked ~ label
+  svg:nth-of-type(1)
+    display block
+  svg:nth-of-type(2)
+    display none
